# distributed-video-system

./: .gitignore  Makefile  README.md  docker-compose.yaml
detection/: Dockerfile  Makefile  pyproject.toml
detection/detection/: detect.py  main.py
gateway/: Dockerfile  Makefile  pyproject.toml
gateway/gateway/: config.py  main.py  s3.py
gateway/gateway/clients/: s3.py
gateway/gateway/routers/: scenario.py
gateway/gateway/schemas/: scenario.py
getaway/: Dockerfile  Makefile  pyproject.toml
getaway/getaway/: main.py
getaway/getaway/routers/: scenario.py
orchestrator/: Dockerfile  go.mod  go.sum  test.http
orchestrator/cmd/: main.go
orchestrator/internal/: watchdog.go
orchestrator/internal/api/: create_scenario.go  get_predictions.go  get_status.go  service.go  stop_scenario.go
orchestrator/internal/config/: config.go  docker.yaml  local.yaml
orchestrator/internal/database/: db.go  heartbeats.go  outbox.go  scenario.go  tx.go
orchestrator/internal/kafka/: consumer.go  producer.go
orchestrator/internal/models/: models.go
orchestrator/internal/outbox/: outbox.go
orchestrator/internal/s3/: s3.go
orchestrator/internal/utils/: utils.go
runner/: Dockerfile  go.mod  go.sum
runner/cmd/: main.go
runner/internal/config/: config.go  docker.yaml  local.yaml
runner/internal/database/: db.go  scenario.go
runner/internal/kafka/: consumer.go  producer.go
runner/internal/models/: models.go
runner/internal/runner/: runner.go
runner/internal/s3/: s3.go
runner/internal/services/detection/: detection.go
